[package]
name = "Kage"
description = "Web SSO in Rust"
version = "0.1.0"
edition = "2021"
authors = ["ARSX"]
repository = "https://github.com/andikaleonardo/kage"

[dependencies]
tracing-subscriber = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
axum-extra = { version = "0.9.3" }
http = "0.2"
anyhow = "1.0"
redis = "0.24.0"
dotenv = "0.15.0"
jsonwebtoken = "8.1.0"
serde = { version = "1.0", features = ["derive"] }