[package]
name = "Kage"
description = "Web SSO in Rust"
version = "0.1.0"
edition = "2021"
authors = ["ARSX"]
repository = "https://github.com/andikaleonardo/kage"

[dependencies]
tracing-subscriber = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
axum-extra = { version = "0.9.3" }
http = "1.1"
anyhow = "1.0"
redis = "0.25.4"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"